Header-hide-mobile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <body class="">
   <!-- Onload Popup -->
-  <div id="boxes" scroll="no" style="overflow:hidden">
+  <div id="boxes">
     <div style="top: 729.5px; left: 265px; display: block;" id="dialog" class="window"> 
     <div id="san">
     <a href="#" class="close agree">
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-lg-5">
             <div class="widget top-head no-border m-0">
-              <ul class="list-inline sm-text-center destop-text-center">
+              <ul class="list-inline sm-text-center destop-text-center mobile-hide">
                 <li>
                   <a class="text-white" href="tel:+9420707207"><i class="fa fa-phone text-white"></i> +91 9420707207</a>
                 </li>
@@ -91,10 +91,9 @@
                 <li>
                   <a href="student-enquiry.html" class="btn btn-default5 btn-circled btn-xs">Student Enquiry</a>
                 </li>
-                <li class="text-white">|</li>
               </ul>
             </div>
-            <div class="widget no-border m-0 mr-15 pull-right flip sm-pull-none sm-text-center  destop-text-center">
+            <div class="widget no-border m-0 mr-15 pull-right flip sm-pull-none sm-text-center  destop-text-center mobile-hide">
               <ul class="styled-icons icon-circled icon-sm pull-right flip sm-pull-none sm-text-center  destop-text-center">
                 <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://web.whatsapp.com/send?phone=+919420707207&amp;text=I'm%20Interested%20in%20MagicMind%20Institute%20Program%20Could%20You%20Please%20Share%20With%20Me%20Your%20programs%20Details"><i class="fa fa-whatsapp"></i></a></li>
