--- a/index.html
+++ b/index.html
@@ -155,22 +155,16 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="banner/banner.jpg" alt="Magic Mind slider">
+            <img src="banner/banner0.jpg" alt="Magic Mind slider">
           </div>
           <div class="item">
-            <img src="images/gallery/G25.jpg" alt="Magic Mind slider">
+            <img src="banner/banner1.jpg" alt="Magic Mind slider">
           </div>
           <div class="item">
-            <img src="images/gallery/G23.jpg" alt="Magic Mind slider">
+            <img src="banner/banner2.jpg" alt="Magic Mind slider">
           </div>
           <div class="item">
-            <img src="images/gallery/G28.jpg" alt="Magic Mind slider">
-          </div>
-          <div class="item">
-            <img src="images/gallery/G29.jpg" alt="Magic Mind slider">
-          </div>
-          <div class="item">
-            <img src="images/gallery/G24.jpg" alt="Magic Mind slider">
+            <img src="banner/banner3.jpg" alt="Magic Mind slider">
           </div>
         </div>
 
